panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_ptr_deref_assign.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_ptr_deref_assign.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_ptr_deref_assign.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition x~2 `long` (sign-extend `long` (42 `int`)))
         (definition p~3 `ptr<long>`
            (addressof `ptr<long>`
               (x~2 `long`)))
         (definition pp~4 `ptr<ptr<long>>`
            (addressof `ptr<ptr<long>>`
               (p~3 `ptr<long>`)))
         (expression (assign `long` (deref `long` (deref `ptr<long>` (pp~4 `ptr<ptr<long>>`))) (sign-extend `long` (27 `int`))))
         (return (truncate `int` (x~2 `long`))))))

----- stderr -----
