panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_ptr_equality.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_ptr_equality.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_ptr_equality.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition p1~2 `ptr<long>` ∅)
         (definition b~3 `unsigned long long` (sign-extend `unsigned long long` (42 `int`)))
         (definition p2~4 `ptr<long>` (ptr-add `ptr<long>` (noop-type-conversion `long` (b~3 `unsigned long long`)) (p1~2 `ptr<long>`)))
         (definition p3~5 `ptr<long>` (ptr-sub `ptr<long>` (p2~4 `ptr<long>`) (noop-type-conversion `long` (b~3 `unsigned long long`))))
         (return (ptr-equal `int` (p3~5 `ptr<long>`) (p1~2 `ptr<long>`))))))

----- stderr -----
