panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_ptr_relations.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_ptr_relations.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_ptr_relations.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition p1~2 `ptr<long>` ∅)
         (definition b~3 `unsigned long long` (sign-extend `unsigned long long` (42 `int`)))
         (definition p2~4 `ptr<long>` (ptr-add `ptr<long>` (noop-type-conversion `long` (b~3 `unsigned long long`)) (p1~2 `ptr<long>`)))
         (definition p3~5 `ptr<long>` (ptr-sub `ptr<long>` (p2~4 `ptr<long>`) (noop-type-conversion `long` (b~3 `unsigned long long`))))
         (return (add `int` (add `int` (add `int` (ptr-less `int` (p1~2 `ptr<long>`) (p2~4 `ptr<long>`)) (ptr-less-equal `int` (p1~2 `ptr<long>`) (p3~5 `ptr<long>`))) (ptr-greater `int` (p2~4 `ptr<long>`) (p1~2 `ptr<long>`))) (ptr-greater-equal `int` (p3~5 `ptr<long>`) (p1~2 `ptr<long>`)))))))

----- stderr -----
