panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_ptr_to_char_deref_assign.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_ptr_to_char_deref_assign.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_ptr_to_char_deref_assign.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition x~2 `char` (truncate `char` (42 `int`)))
         (definition p~3 `ptr<char>`
            (addressof `ptr<char>`
               (x~2 `char`)))
         (definition pp~4 `ptr<ptr<char>>`
            (addressof `ptr<ptr<char>>`
               (p~3 `ptr<char>`)))
         (expression (assign `char` (deref `char` (deref `ptr<char>` (pp~4 `ptr<ptr<char>>`))) (truncate `char` (27 `int`))))
         (return (sign-extend `int` (x~2 `char`))))))

----- stderr -----
