panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_ptr_to_static.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_ptr_to_static.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_ptr_to_static.c"
   (definition external x~0 `int` (42 `int`))
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (definition p~3 `ptr<int>`
            (addressof `ptr<int>`
               (x~0 `int`)))
         (definition local_copy~4 `int` (deref `int` (p~3 `ptr<int>`)))
         (expression (assign `int` (deref `int` (p~3 `ptr<int>`)) (27 `int`)))
         (return (add `int` (add `int` (local_copy~4 `int`) (deref `int` (p~3 `ptr<int>`))) (x~0 `int`))))))

----- stderr -----
