panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_return_global_variable_in_main.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_return_global_variable_in_main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (definition return_value~0 `int` (5 `int`))
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (return (return_value~0 `int`)))))

----- stderr -----
